2023-10-03T08:12:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6390376104 # 1950
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 90 256
* notice: prev accum: outdated-unq outdated-all / unq all: 1598 5156 / 1738 5426
* notice: next accum: outdated-unq outdated-all / unq all: 1598 5156 / 1740 5428
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -4 -6 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-19 2023-10-03]

2023-10-03T00:43:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6387173018 # 1949
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 92 260
* notice: prev accum: outdated-unq outdated-all / unq all: 1596 5153 / 1733 5419
* notice: next accum: outdated-unq outdated-all / unq all: 1598 5156 / 1738 5426
* notice: prev exec diff / last date diff / accum: unq all: +5 +7 -4 -10 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [2023-09-18] / [2023-09-19 2023-10-02]

2023-10-02T16:12:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6382662589 # 1948
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 92 264
* notice: prev accum: outdated-unq outdated-all / unq all: 1596 5153 / 1732 5418
* notice: next accum: outdated-unq outdated-all / unq all: 1596 5153 / 1733 5419
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-18 2023-10-02]

2023-10-02T08:13:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6377606353 # 1947