@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-03T08:12:37Z",
-  "count_outdated" : 5156,
-  "uniques_outdated" : 1598,
+  "timestamp" : "2023-10-04T00:43:40Z",
+  "count_outdated" : 5181,
+  "uniques_outdated" : 1613,
   "count" : 5428,
   "uniques" : 1740,
   "clones" : [
-    {
-      "timestamp": "2023-09-19T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 25 ],
-      "count_decinc": [ 16, 25 ],
-      "uniques": 7,
-      "uniques_minmax": [ 7, 15 ],
-      "uniques_decinc": [ 8, 15 ]
-    },
     {
       "timestamp": "2023-09-20T00:00:00Z",
       "count": 31,
