@@ -1,12 +1,7 @@
 {
-  "count": 256,
-  "uniques": 90,
+  "count": 247,
+  "uniques": 88,
   "clones": [
-    {
-      "timestamp": "2023-09-19T00:00:00Z",
-      "count": 9,
-      "uniques": 7
-    },
     {
       "timestamp": "2023-09-20T00:00:00Z",
       "count": 31,
