@@ -1,3 +1,12 @@
+2023-10-04T00:43:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6400071134 # 1952
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
+* notice: last 14d: unq all: 88 247
+* notice: prev accum: outdated-unq outdated-all / unq all: 1598 5156 / 1740 5428
+* notice: next accum: outdated-unq outdated-all / unq all: 1613 5181 / 1740 5428
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-19] / []
+
 2023-10-03T08:12:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6390376104 # 1950
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
